--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="grey">#969696</color>
+    <color name="blue">#1A3372</color>
+    <color name="dark">#373737</color>
+
+
+    <color name="backgroundStart">#FDFDFD</color>
+    <color name="backgroundCenter">#F2F2F2</color>
+    <color name="backgroundEnd">#EBEBEB</color>
 </resources>
