--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -27,11 +27,11 @@
         style="@style/News"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/title"
-        app:layout_constraintRight_toLeftOf="@+id/image"
+        app:layout_constraintRight_toLeftOf="@+id/newsImage"
         app:layout_constraintTop_toBottomOf="@+id/title"/>
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/newsImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintWidth_percent="0.3"
@@ -53,7 +53,7 @@
         android:layout_marginLeft="@dimen/margin_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/image"
+        app:layout_constraintLeft_toRightOf="@+id/newsImage"
         app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
