--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="grey">#969696</color>
     <color name="blue">#1A3372</color>
     <color name="dark">#373737</color>
+    <color name="white">#FFFFFF</color>
 
 
     <color name="backgroundStart">#FDFDFD</color>
