--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/margin_10"
     android:background="@drawable/background">
 
@@ -13,34 +13,37 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="Yes, we can do that by using a vector file. In order to add this functionality in a mobile application."
+        tools:text="Yes, we can do that by using a vector file. In order to add this functionality in a mobile application."
         style="@style/NewsTitle"
         android:layout_marginEnd="@dimen/margin_10"
         />
 
     <TextView
-        android:id="@+id/news"
+        android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintWidth_percent="0.6"
-        android:text="yes, we can do that by using a vector file. In order to add this functionality in a mobile application, Android Studio includes a tool called the Vector Asset Studio that is used to add some predefined material icons along with your own"
-        style="@style/News"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@+id/title"
         app:layout_constraintRight_toLeftOf="@+id/newsImage"
-        app:layout_constraintTop_toBottomOf="@+id/title"/>
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:text="yes, we can do that by using a vector file. In order to add this functionality in a mobile application, Android Studio includes a tool called the Vector Asset Studio that is used to add some predefined material icons along with your own"
+        style="@style/News"
+        android:maxLines="4"
+        android:ellipsize="end"
+       />
 
     <ImageView
         android:id="@+id/newsImage"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/image_height"
         app:layout_constraintWidth_percent="0.3"
         android:contentDescription="@string/news_image"
-        android:src="@android:drawable/ic_menu_gallery"
-        app:layout_constraintLeft_toRightOf="@+id/news"
-        app:layout_constraintRight_toRightOf="@+id/news"
-        app:layout_constraintTop_toTopOf="@+id/news"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/content"
+        app:layout_constraintRight_toLeftOf="@+id/rightArrow"
+        app:layout_constraintTop_toTopOf="@+id/content"
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true"
         />
 
     <ImageView
