--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="margin_10">10dp</dimen>
+    <dimen name="margin_20">10dp</dimen>
     <dimen name="tool_bar_height">56dp</dimen>
     <dimen name="image_height">60dp</dimen>
 </resources>
