1.Implemented error handling 2.Handled Network error case 3.Implemented Data state using sealed classes

--- a/app/src/main/res/layout/news_home_fragment.xml
+++ b/app/src/main/res/layout/news_home_fragment.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
+    android:id="@+id/homeFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.NewsHomeFragment">
@@ -24,6 +24,13 @@
                 android:scrollbars="vertical" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            layout="@layout/no_connection"
+            android:visibility="gone"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ProgressBar
