1.Changed news API url to new url https://dl.dropboxusercontent.com/s/2iodh4vg0eortkl/facts.js 2.Changed model classes based on new API 3.Renamed classes based on new API for country facts

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,12 +13,12 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="NewsTitle" parent="android:Theme">
+    <style name="FactTitle" parent="android:Theme">
         <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">20dp</item>
     </style>
 
-    <style name="News" parent="android:Theme">
+    <style name="FactDescription" parent="android:Theme">
         <item name="android:textColor">@color/dark</item>
         <item name="android:textSize">16dp</item>
     </style>
