--- a/app/src/main/res/layout/facts_home_fragment.xml
+++ b/app/src/main/res/layout/facts_home_fragment.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
                 app:swipeToRefresh="@{swipeRefresh}"
-                app:dataState="@{factsViewModel.getCountryData}"/>
+                app:dataState="@{factsViewModel.countryDataState}"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
