Fixed navigation stack for Fragments Toolbar title for landscape mode on screen rotation

--- a/app/src/main/res/layout/facts_activity.xml
+++ b/app/src/main/res/layout/facts_activity.xml
@@ -14,17 +14,16 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="@dimen/tool_bar_height"
             android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
-            <FrameLayout
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ui.FactsActivity" />
-
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.FactsActivity" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
