--- a/app/src/main/res/layout/facts_home_fragment.xml
+++ b/app/src/main/res/layout/facts_home_fragment.xml
@@ -2,9 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-
         <variable
             name="factsViewModel"
             type="com.cognizant.facts.feature.FactsViewModel" />
@@ -50,6 +48,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
+                style="@style/AppTheme"
                 app:swipeToRefresh="@{swipeRefresh}"
                 app:dataState="@{factsViewModel.countryDataState}"/>
 
