--- a/app/src/main/res/layout/facts_item_no_description.xml
+++ b/app/src/main/res/layout/facts_item_no_description.xml
@@ -30,7 +30,7 @@
         app:layout_constraintLeft_toRightOf="@+id/title"
         app:layout_constraintRight_toLeftOf="@+id/rightArrow"
         app:layout_constraintTop_toTopOf="@+id/title"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:adjustViewBounds="true"
         />
 
