--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorAccent">#0288D1</color>
 
     <color name="grey">#969696</color>
     <color name="blue">#1A3372</color>
     <color name="dark">#373737</color>
     <color name="white">#FFFFFF</color>
 
-
     <color name="backgroundStart">#FDFDFD</color>
-    <color name="backgroundCenter">#F2F2F2</color>
-    <color name="backgroundEnd">#EBEBEB</color>
+    <color name="backgroundCenter">#E5E5E5</color>
+    <color name="backgroundEnd">#D4D4D4</color>
 </resources>
