--- a/app/src/main/res/layout/facts_item_no_description.xml
+++ b/app/src/main/res/layout/facts_item_no_description.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/factImage"
         android:layout_width="0dp"
-        android:layout_height="@dimen/image_height_short"
+        android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.8"
         app:layout_constraintWidth_percent="0.3"
         android:contentDescription="@string/facts_image"
@@ -37,7 +37,7 @@
     <ImageView
         android:id="@+id/rightArrow"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/image_height_short"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/see_fact_details"
         android:src="@drawable/ic_chevron_right"
         android:tint="@color/grey"
