--- a/app/src/main/res/layout/facts_item_no_description.xml
+++ b/app/src/main/res/layout/facts_item_no_description.xml
@@ -26,7 +26,7 @@
         app:layout_constraintHeight_percent="0.8"
         app:layout_constraintWidth_percent="0.3"
         android:contentDescription="@string/facts_image"
-        app:layout_constraintBottom_toBottomOf="@+id/description"
+        app:layout_constraintBottom_toBottomOf="@+id/title"
         app:layout_constraintLeft_toRightOf="@+id/title"
         app:layout_constraintRight_toLeftOf="@+id/rightArrow"
         app:layout_constraintTop_toTopOf="@+id/title"
