--- a/app/src/main/res/layout/facts_activity.xml
+++ b/app/src/main/res/layout/facts_activity.xml
@@ -24,6 +24,6 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.ui.FactsActivity" />
+        tools:context=".ui.FactsActivity" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
