--- a/app/src/main/res/layout/facts_home_fragment.xml
+++ b/app/src/main/res/layout/facts_home_fragment.xml
@@ -5,14 +5,14 @@
     <data>
         <variable
             name="factsViewModel"
-            type="com.cognizant.facts.feature.FactsViewModel" />
+            type="com.cognizant.facts.ui.FactsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/homeFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".feature.ui.FactsHomeFragment">
+        tools:context=".ui.FactsHomeFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
