--- a/app/src/main/res/layout/facts_item_no_description.xml
+++ b/app/src/main/res/layout/facts_item_no_description.xml
@@ -23,14 +23,14 @@
         android:id="@+id/factImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintHeight_percent="1"
         app:layout_constraintWidth_percent="0.3"
         android:contentDescription="@string/facts_image"
         app:layout_constraintBottom_toBottomOf="@+id/title"
         app:layout_constraintLeft_toRightOf="@+id/title"
         app:layout_constraintRight_toLeftOf="@+id/rightArrow"
         app:layout_constraintTop_toTopOf="@+id/title"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         />
 
